# aboutcode-toolkit

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CHANGELOG.txt  Dockerfile  EXAMPLES  MANIFEST.in  MAPPING.CONFIG  NOTICE  README.md  README.rst  README.txt  REFERENCE.rst  SPEC  SPECIFICATION.rst  USAGE  USAGE.rst  about  about.ABOUT  about.bat  about.cfg  about.py  about2.ABOUT  aboutcode  aboutcode.ABOUT  aboutcode.bat  aboutcode.cfg  appveyor.yml  azure-pipelines.yml  configure  configure.bat  gen_tests.py  genabout.py  notes.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tests.py  (+2 more)
.github/workflows/: docs-ci.yml  pypi-release.yml
about_code_tool/: MAPPING.CONFIG  __init__.py  __main__.py  about.py  about2.py  api.py  attrib.py  cmd.py  gen.py  genabout.py  genattrib.py  help.py  licenses.py  model.py  saneyaml.py  schematics_model.py  util.py
about_code_tool.egg-info/: PKG-INFO  SOURCES.txt
about_code_tool/about_code_tool.egg-info/: PKG-INFO  top_level.txt
about_code_tool/templates/: default.html  default2.html  json_template.template
about_code_tool/tests/: __init__.py  test_about.py  test_about2.py  test_api.py  test_attrib.py  test_cmd.py  test_gen.py  test_genabout.py  test_genattrib.py  test_model.py  test_schematics.py  test_tstutil.py  test_util.py  tstutil.py
aboutcode/: MAPPING.CONFIG  __init__.py  __main__.py  about.py  about2.py  api.py  cmd.py  gen.py  model.py  util.py
aboutcode/tests/: __init__.py  test_about.py  test_about2.py  test_api.py  test_attrib.py  test_cmd.py  test_gen.py  test_genabout.py  test_misc.py  test_model.py  test_util.py
docs/: CHANGELOG.rst  UsingAboutCodetoDocumentYourSoftwareAssets.md  requirements.txt
docs/scripts/: doc8_style_check.sh  sphinx_build_link_check.sh
docs/source/: conf.py  general.rst  home.rst  index.rst  reference.rst  specification.rst  type_of_errors.rst
docs/source/_static/: theme_overrides-skeleton-2022-03-28-updated.css  theme_overrides.css
etc/: configure  configure.bat  configure.py  getconf.py
etc/conf/: base.txt  posix.sh  win.bat  win.txt
etc/conf/dev/: base.txt  eclipse.project.in  eclipse.pydevproject.posix.in  eclipse.pydevproject.win.in  posix.sh  win.bat
etc/scripts/: gen_requirements.py  gen_requirements_dev.py  irc-notify.py  irc-notify.py.ABOUT  irc-notify.py.NOTICE
example/e2fsprogs-1.39/input/: MAPPING.CONFIG  e2fsprogs-1.39-CreateAboutFile.csv  e2fsprogs-1.39-INV.xlsx  template_sample_attribution_starship.html  template_sample_license_ref_by_confirmed_license.html
example/e2fsprogs-1.39/output/: sample_attribution_starship.html  sample_license_ref_starship.html
example/e2fsprogs-about/e2fsprogs-1.39/: e2fsprogs-1.39.NOTICE
man/man1/: .gitignore
src/about_tool/: MAPPING.CONFIG  __init__.py  __main__.py  api.py  attrib.py  cmd.py  gen.py  licenses.py  model.py  schematics_model.py  util.py
src/about_tool/templates/: default.html  default2.html  default3.html  default_html.template  default_json.template  list.csv
src/aboutcode/: __init__.py  __main__.py  api.py  attrib.py  attrib_util.py  cmd.py  gen.py  inv.py  licenses.py  mapping.config  model.py  template-help.txt  transform.py  util.py
src/aboutcode/templates/: default_html.template  default_json.template  list.csv
src/attributecode/: __init__.py  __main__.py  api.py  attrib.py  attrib_util.py  cmd.py  gen.py  inv.py  licenses.py  mapping.config  model.py  saneyaml.py  transform.py  util.py
src/attributecode/templates/: default_html.template  default_json.template  list.csv  scancode_html.template
templates/: default.html  default.txt  default_html.template  license_ref.template  scancode_html.template  template_license_ref_by_license.html
testdata/SCMTests/: valid_git_repo_elasticsearch.ABOUT
testdata/allAboutInOneDir/about_ref/: django_snippets_2413.ABOUT  elasticsearch.ABOUT
testdata/attrib/: license_text.LICENSE  test.template
testdata/file_expansion/: distribute.ABOUT
testdata/filesfields/: non_ascii_field.about
testdata/haveAboutFile/: basic.about  duplicate_key_names.AbOuT  duplicate_key_names_2.aBout  httpd-2.4.3.tar.gz.ABOUT  invalid_url.About
testdata/mandatory_fields/: missing-version.about
testdata/output/: test.csv  testparser.csv  thirdparty-testdata.csv
testdata/parser_tests/: .ABOUT  about_file_ref.c.ABOUT  about_resource_field_present.ABOUT  missing_mand_values.ABOUT
testdata/spdx_licenses/: invalid_multi_name.ABOUT  multi_and.ABOUT  test.ABOUT
testdata/test_files_for_genabout/: about.csv  elasticsearch.ABOUT  missing_about_resource.csv  thirdparty.csv
testdata/test_for_continuation_lines/: test_input.ABOUT
testdata/test_for_dir/: include_all-1.ABOUT  include_all.ABOUT
tests/: test_api.py  test_attrib.py  test_cmd.py  test_gen.py  test_inv.py  test_model.py  test_schematics.py  test_transform.py  test_util.py  test_validate.py  testing_utils.py  utils.py
tests/testdata/SCMTests/: invalid_git_repo_elasticsearch.ABOUT  valid_git_repo_elasticsearch.ABOUT
(+432 files in other folders)
