[bdist_wheel]
universal = 1

[metadata]
license_file = NOTICE

[aliases]
release = clean --all sdist --formats=bztar,zip bdist_wheel 

[tool:pytest]
norecursedirs =
    .git
    .cache
    .settings
    bin
    dist
    dist
    build
    _build
    docs
    man
    share
    example
    etc
    Include
    include
    Lib
    lib
    local
    Scripts
    thirdparty
    tmp
    tests/testdata/*

python_files = *.py

python_classes=Test
python_functions=test

addopts =
    -rfEsxXw
    --strict
     -s
     -vv
    --ignore docs/conf.py
    --ignore setup.py
    --doctest-modules
