[metadata]
license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
name = aboutcode-toolkit
author = nexB. Inc. and others
author_email = info@aboutcode.org
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = AboutCode-toolkit is a tool to document the provenance (origin and license) of third-party software using small text files. Collect inventories and generate attribution documentation.
long_description = file:README.rst
url = https://github.com/nexB/aboutcode-toolkit
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
    Topic :: Software Development
	Topic :: Software Development :: Documentation
	Topic :: Software Development :: Quality Assurance
	Topic :: System :: Software Distribution
    Topic :: Utilities
keywords =
	license
	about
	metadata
	package
	copyright
	attribution
	software
	inventory

[options]
package_dir=
    =src
packages=find:
include_package_data = true
zip_safe = false
install_requires =
    jinja2 
    click
    saneyaml
    boolean.py >= 3.5, < 4.0
    license_expression >= 0.94
    packageurl_python >= 0.9.0

setup_requires = setuptools_scm[toml] >= 4
python_requires = >=3.6.*, <4

[options.packages.find]
where=src

[options.extras_require]
testing =
    # upstream
    pytest >= 6
    pytest-xdist >= 2
    mock
    colorama
    py
docs=
    Sphinx>=3.3.1
    sphinx-rtd-theme>=0.5.0
    doc8>=0.8.1

[options.entry_points]
console_scripts =
    about=attributecode.cmd:about

[tool:pytest]
norecursedirs =
    .git
    .cache
    .settings
    bin
    dist
    dist
    build
    _build
    docs
    man
    share
    example
    etc
    Include
    include
    Lib
    lib
    local
    Scripts
    thirdparty
    tmp
    tests/testdata/*
    tests/ignore
    tests/Ignore
    tests/ignore/

python_files = *.py

python_classes=Test
python_functions=test

addopts =
    -rfEsxXw
    --strict-markers
     -s
     -vv
    --ignore docs/conf.py
    --ignore setup.py
    --doctest-modules
