[metadata]
name = aboutcode-toolkit
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = AboutCode-toolkit is a tool to document the provenance (origin and license) of third-party software using small text files. Collect inventories and generate attribution documentation.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/aboutcode-toolkit

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Documentation
    Topic :: Software Development :: Quality Assurance
    Topic :: System :: Software Distribution
    Topic :: Utilities

keywords =
    license
    about
    metadata
    package
    copyright
    attribution
    software
    inventory
    open source
    sca
    SBOM
    spdx

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.7

install_requires =
    attrs
    boolean.py >= 3.5
    certifi
    click
    jinja2
    license_expression >= 0.94
    openpyxl
    packageurl_python >= 0.9.0
    requests
    saneyaml


[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    twine
    black
    isort

docs =
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2

[options.entry_points]
console_scripts =
    about=attributecode.cmd:about
